--- a/index.html
+++ b/index.html
@@ -338,5 +338,22 @@
   </div>
 
   <script src="./app.js"></script>
+  <!-- Image Viewer Modal -->
+<div id="modalViewer" class="modal hidden" role="dialog" aria-modal="true">
+  <div class="modal-sheet" style="height: 88vh;">
+    <div class="modal-head">
+      <div class="text-base font-semibold">圖片</div>
+      <button class="btn btn-ghost" id="btnCloseViewer">關閉</button>
+    </div>
+    <div id="viewerStage" class="modal-body" style="height: calc(88vh - 110px); touch-action: none; overflow: hidden;">
+      <img id="viewerImg" alt="viewer" style="width: 100%; height: 100%; object-fit: contain; transform-origin: 50% 50%; user-select:none; -webkit-user-drag:none;" />
+    </div>
+    <div class="modal-foot">
+      <button class="btn btn-outline" id="btnResetViewer">重置</button>
+      <div class="text-xs text-slate-300/80">雙指縮放 / 單指拖移 / 下滑關閉</div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
