--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
   <link rel="manifest" href="./manifest.webmanifest" />
   <link rel="stylesheet" href="./styles.css" />
 
-  <!-- Tailwind CDN (MVP用；之後可改成自行打包) -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <!-- Chart.js for Analysis -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
   <title>2026冰島挪威之旅</title>
@@ -47,19 +44,16 @@
 
     <!-- Content (Bottom 4/5) -->
     <main class="app-content">
-      <!-- Tab Header -->
       <nav class="tabbar px-2">
         <button class="tab active" data-tab="itinerary">行程</button>
         <button class="tab" data-tab="expenses">記帳</button>
         <button class="tab" data-tab="analysis">分析</button>
       </nav>
 
-      <!-- Pages (edge-swipe changes page) -->
       <section id="pages" class="pages">
         <!-- ITINERARY -->
         <article id="page-itinerary" class="page">
           <div class="px-4 pt-3">
-            <!-- Date strip -->
             <div class="date-strip" id="dateStrip"></div>
 
             <div class="mt-3 flex items-center justify-between gap-2">
@@ -194,9 +188,7 @@
                     已支出 <span id="budgetSpent">NT$ --</span>
                   </div>
                 </div>
-                <div class="text-right text-xs text-slate-300/80">
-                  只計算：家齊＋亭穎
-                </div>
+                <div class="text-right text-xs text-slate-300/80">只計算：家齊＋亭穎</div>
               </div>
 
               <div class="mt-4 progress">
@@ -232,7 +224,6 @@
       </section>
     </main>
 
-    <!-- Bottom safe area spacer for iPhone -->
     <div class="safe-bottom"></div>
   </div>
 
@@ -240,7 +231,7 @@
   <div id="modalItinerary" class="modal hidden" role="dialog" aria-modal="true">
     <div class="modal-sheet">
       <div class="modal-head">
-        <div class="text-base font-semibold">新增行程</div>
+        <div id="itModalTitle" class="text-base font-semibold">新增行程</div>
         <button class="btn btn-ghost" id="btnCloseItinerary">關閉</button>
       </div>
 
@@ -285,7 +276,7 @@
           </div>
 
           <label class="field col-span-2">
-            <div class="field-label">圖片（初版：本地顯示；可後續接Drive同步）</div>
+            <div class="field-label">圖片（會上傳到 Google Drive）</div>
             <input id="itImage" type="file" accept="image/*" class="field-input" />
             <div id="itImagePreview" class="mt-2"></div>
           </label>
@@ -299,7 +290,7 @@
     </div>
   </div>
 
-  <!-- Filter Modal (Analysis) -->
+  <!-- Filter Modal -->
   <div id="modalFilter" class="modal hidden">
     <div class="modal-sheet">
       <div class="modal-head">
@@ -309,7 +300,6 @@
 
       <div class="modal-body">
         <div class="text-xs text-slate-300/80">可複選，按套用後更新圓餅圖與明細</div>
-
         <div class="mt-4 space-y-4">
           <div>
             <div class="field-label">你是誰</div>
@@ -337,23 +327,23 @@
     </div>
   </div>
 
-  <script src="./app.js"></script>
   <!-- Image Viewer Modal -->
-<div id="modalViewer" class="modal hidden" role="dialog" aria-modal="true">
-  <div class="modal-sheet" style="height: 88vh;">
-    <div class="modal-head">
-      <div class="text-base font-semibold">圖片</div>
-      <button class="btn btn-ghost" id="btnCloseViewer">關閉</button>
-    </div>
-    <div id="viewerStage" class="modal-body" style="height: calc(88vh - 110px); touch-action: none; overflow: hidden;">
-      <img id="viewerImg" alt="viewer" style="width: 100%; height: 100%; object-fit: contain; transform-origin: 50% 50%; user-select:none; -webkit-user-drag:none;" />
-    </div>
-    <div class="modal-foot">
-      <button class="btn btn-outline" id="btnResetViewer">重置</button>
-      <div class="text-xs text-slate-300/80">雙指縮放 / 單指拖移 / 下滑關閉</div>
+  <div id="modalViewer" class="modal hidden" role="dialog" aria-modal="true">
+    <div class="modal-sheet" style="height: 88vh;">
+      <div class="modal-head">
+        <div class="text-base font-semibold">圖片</div>
+        <button class="btn btn-ghost" id="btnCloseViewer">關閉</button>
+      </div>
+      <div id="viewerStage" class="modal-body" style="height: calc(88vh - 110px); touch-action: none; overflow: hidden;">
+        <img id="viewerImg" alt="viewer" style="width: 100%; height: 100%; object-fit: contain; transform-origin: 50% 50%; user-select:none; -webkit-user-drag:none;" />
+      </div>
+      <div class="modal-foot">
+        <button class="btn btn-outline" id="btnResetViewer">重置</button>
+        <div class="text-xs text-slate-300/80">雙指縮放 / 單指拖移 / 下滑關閉</div>
+      </div>
     </div>
   </div>
-</div>
 
+  <script src="./app.js"></script>
 </body>
 </html>
