--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="2026冰島挪威之旅" />
-  <meta name="theme-color" content="#9ad7ff" />
+  <meta name="theme-color" content="#bfe9ff" />
 
   <link rel="manifest" href="./manifest.webmanifest" />
   <link rel="stylesheet" href="./styles.css" />
@@ -17,7 +17,7 @@
   <title>2026冰島挪威之旅</title>
 </head>
 
-<body class="bg-slate-950 text-slate-50 select-text">
+<body class="text-slate-50 select-text">
   <div id="app" class="app-shell">
     <!-- Header (Top 1/5) -->
     <header class="app-header px-4 pt-4 pb-3">
@@ -34,8 +34,8 @@
         <div class="shrink-0 text-right">
           <div class="text-xs text-slate-200/80">狀態</div>
           <div id="syncStatus" class="mt-1 inline-flex items-center gap-2">
-            <span class="dot dot-wait"></span>
-            <span class="text-sm">待同步</span>
+            <span class="dot dot-ok"></span>
+            <span class="text-sm">已同步</span>
           </div>
           <button id="btnForceSync" class="mt-3 btn btn-ghost text-sm">手動同步</button>
         </div>
@@ -187,6 +187,7 @@
                   <div class="text-sm text-slate-200/90 mt-1">
                     已支出 <span id="budgetSpent">NT$ --</span>
                   </div>
+                  <div id="momLine" class="text-xs text-slate-300/80 mt-1">媽媽：--</div>
                 </div>
                 <div class="text-right text-xs text-slate-300/80">只計算：家齊＋亭穎</div>
               </div>
@@ -239,11 +240,11 @@
         <div class="grid grid-cols-2 gap-3">
           <label class="field">
             <div class="field-label">開始時間</div>
-            <input id="itStart" type="time" class="field-input" />
+            <input id="itStart" type="time" class="field-input time-input" />
           </label>
           <label class="field">
             <div class="field-label">結束時間</div>
-            <input id="itEnd" type="time" class="field-input" />
+            <input id="itEnd" type="time" class="field-input time-input" />
           </label>
 
           <div class="col-span-2">
