--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <button @click="openRateModal" class="text-xs text-slate-500 bg-white/50 border border-white px-4 py-2 rounded-full flex items-center shadow-sm backdrop-blur-sm font-bold">匯率設定</button>
         </div>
 
-        <div class="bg-gradient-to-br from-[#89A7B1] to-[#6D8A94] text-white rounded-3xl p-6 shadow-xl mb-6 relative overflow-hidden ring-1 ring-white/20 border border-[#5A7B85]">
+        <div class="bg-gradient-to-br from-[#A99D94] to-[#8C7B70] text-white rounded-3xl p-6 shadow-xl mb-6 relative overflow-hidden ring-1 ring-white/20 border border-[#8C7B70]">
           <div class="border-b border-white/10 pb-3 mb-3 flex justify-between items-center relative z-10">
             <div class="text-xs font-medium opacity-80 tracking-widest uppercase">家齊+亭穎 預算</div>
             <div class="font-bold text-lg font-mono tracking-wider opacity-90">500,000</div>
